[package]
name = "iz80"
version = "0.3.6"
authors = ["Tom Morton <tomm8086@gmail.com>", "Ivan Izaguirre <ivanizag@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "eZ80, Z80 and 8080 emulator"
keywords = ["eZ80", "Z80", "8080", "CPM", "emulator"]
homepage = "https://github.com/tomm/ez80"
repository = "https://github.com/tomm/ez80"
readme = "README.md"

[dependencies]
